--- a/Paginas/style.css
+++ b/Paginas/style.css
@@ -14,6 +14,15 @@ ul{
 	list-style: none;
 }
 
+li a{
+	color: black;
+	text-decoration: none;
+}
+
+li a:hover{
+	color: crimson;
+}
+
 .active{
 	color: crimson;
 	text-decoration: underline;
@@ -34,6 +43,7 @@ ul{
 .nav-links{
 	display: flex;
 	align-items: center;
+	justify-content: space-around;
 	
 }
 .nav-links li{
@@ -95,7 +105,7 @@ header{
 .hero{
     width: 100vw;
 	height: 100vh;
-	background-image: linear-gradient(rgba(16, 16,16, .5), rgba(16, 16,16, .8 )), url(Paginas/img/pizzitas.png);
+	background-image: linear-gradient(rgba(16, 16,16, .5), rgba(16, 16,16, .8 )), url(img/pizzitas.png);
 	
 	background-position: bottom;
 	background-size: cover;
