--- a/Paginas/style.css
+++ b/Paginas/style.css
@@ -72,6 +72,33 @@ header{
 	font-size: 4vmin;
 }
 
+.sabores {
+	-webkit-animation: sabores 1s cubic-bezier(0.755, 0.050, 0.855, 0.060) infinite both;
+	        animation: sabores 1s cubic-bezier(0.755, 0.050, 0.855, 0.060) infinite both;
+}
+
+ @-webkit-keyframes sabores {
+	0% {
+	  -webkit-transform: rotate(0);
+			  transform: rotate(0);
+	}
+	100% {
+	  -webkit-transform: rotate(90deg);
+			  transform: rotate(90deg);
+	}
+  }
+  @keyframes sabores {
+	0% {
+	  -webkit-transform: rotate(0);
+			  transform: rotate(0);
+	}
+	100% {
+	  -webkit-transform: rotate(90deg);
+			  transform: rotate(90deg);
+	}
+  }
+  
+
 .line {
 	width: 150px;
 	height: 4px;
@@ -165,12 +192,57 @@ header{
 	border-radius: 30%;
 }
 
+.imgpizza:hover{
+	animation: imgpizza 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes imgpizza{
+	0%{
+		transform: translateZ(0);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+	100%{
+		transform: translateZ(50px);
+		box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+	}
+}
+
 .imgespecial{
 	border-radius: 30%;
 }
 
+.imgespecial:hover{
+	animation: imgespecial 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes imgespecial{
+	0%{
+		transform: translateZ(0);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+	100%{
+		transform: translateZ(50px);
+		box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+	}
+}
+
 .imgextra{
 	border-radius: 30%;
+}
+
+.imgextra:hover{
+	animation: imgextra 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes imgextra{
+	0%{
+		transform: translateZ(0);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+	100%{
+		transform: translateZ(50px);
+		box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+	}
 }
 
 .simples .imgpizza{
