--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -22,6 +22,7 @@
 
 a{
 	text-decoration: none;
+	color:black;
 }
 
 ul{
@@ -141,7 +142,7 @@ header{
 }
 
 .footer .contact h2{
-    font-family: 'Montserrat', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .footer .social{
