--- a/scss/_mQueries.scss
+++ b/scss/_mQueries.scss
@@ -137,7 +137,7 @@
         font-size: 40px;
     }    
 
-    .formulario{
+    .formulario1{
         display: flex;
         flex-direction:column;
         align-items: center;
