--- a/scss/contacto/_contacto.scss
+++ b/scss/contacto/_contacto.scss
@@ -41,7 +41,7 @@
             font-size: 18px;
         }
     }
-    .formulario{
+    .formulario1{
         background-color: #ffbb00;
         display: flex;
         flex-direction: column;
