--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -278,7 +278,7 @@
       background-color: #ffbb00;
       color: crimson; }
 
-/* Contact html */
+/* Contacto */
 .formulario {
   display: flex;
   justify-content: center;
@@ -571,7 +571,7 @@
 .nameCard:hover .back {
   transform: perspective(600px) rotateY(360deg); }
 
-/* HOME */
+/* Pizzas */
 .titulo_pi, .titulopizza {
   display: flex;
   flex-direction: column;
@@ -642,7 +642,7 @@
     transform: translateZ(50px);
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35); } }
 
-/* CARDS */
+/* Cuerpo index y pizzas */
 body {
   background-color: #FFFFFF;
   background-attachment: fixed;
@@ -679,48 +679,6 @@ body {
   .titulopizza .p__3 span {
     color: goldenrod;
     text-shadow: 3px solid black; }
-
-.h__cards {
-  display: flex;
-  flex-wrap: wrap;
-  text-align: center;
-  justify-content: space-around;
-  margin: 4rem 9rem; }
-  .h__cards .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    width: 17rem;
-    padding: 17px;
-    border-radius: 15px;
-    margin-top: 2rem; }
-    .h__cards .card .image {
-      height: 230px;
-      width: 100%; }
-    .h__cards .card .product_details span {
-      font-size: 16px; }
-    .h__cards .card .product_details h5 {
-      display: flex;
-      justify-content: space-between;
-      margin: 10px 0; }
-    .h__cards .card .product_details .star {
-      color: goldenrod; }
-    .h__cards .card .product_details p {
-      color: gray;
-      font-size: 12px;
-      margin: 15px 0; }
-    .h__cards .card .product_details button {
-      float: right;
-      background-color: goldenrod;
-      color: white;
-      border: none;
-      padding: 10px 18px;
-      border-radius: 15px; }
-      .h__cards .card .product_details button a {
-        color: black; }
-        .h__cards .card .product_details button a:hover {
-          color: white; }
 
 .boton_wsp {
   position: fixed;
@@ -786,7 +744,7 @@ body {
       font-size: 12px;
       margin: 10px 0; }
 
-.card:hover {
+.pizza:hover {
   animation: card 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
 
 @keyframes card {
