--- a/scss/_seccion1.scss
+++ b/scss/_seccion1.scss
@@ -1,4 +1,4 @@
-/* CARDS */
+/* Cuerpo index y pizzas */
 body{
     background-color: #FFFFFF;
     background-attachment: fixed;
@@ -47,63 +47,7 @@ body{
 }
 
 
-// Products Cards //
-.h__cards{
-    display: flex;
-    flex-wrap: wrap;
-    // margin-top: 5rem;
-    // margin-bottom: 10rem;
-    text-align: center;
-    justify-content: space-around;
-    margin: 4rem 9rem;
-        .card{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            width: 17rem;
-            padding: 17px;
-            border-radius: 15px;
-            margin-top: 2rem;
-            
-            .image{
-                height: 230px;
-                width: 100%;
-            }
-            .product_details {
-                span{
-                font-size: 16px;
-            }
-                    h5{
-                    display: flex;
-                    justify-content: space-between;
-                    margin: 10px 0;
-                }
-                .star{
-                    color: goldenrod;
-                }
-                p{
-                    color: gray;
-                    font-size: 12px;
-                    margin: 15px 0;
-                }
-                button{
-                    float: right;
-                    background-color: goldenrod;
-                    color: white;
-                    border: none;
-                    padding: 10px 18px;
-                    border-radius: 15px;
-                    a{
-                        color: black;
-                        &:hover{
-                            color: white;
-                        }
-                }
-            }   
-        }
-    }
-}
+
 //whatsapp boton 
 .boton_wsp{
     position: fixed;
@@ -190,7 +134,7 @@ body{
 
 
 
-.card:hover{
+.pizza:hover{
     animation: card 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     @keyframes card {
         0% {
